# gtkgladedemo

./: .gitignore  LICENSE  README.md
src/cplusplus/: CMakeLists.txt
src/cplusplus/src/: MainWindow.cpp  MainWindowController.cpp  MainWindowController.h
src/cplusplus/ui/: resources.gresource.xml
src/python/src/: main.py
src/python/ui/: Calculator.glade
src/rust/code/: Cargo.toml
src/rust/code/src/: main.rs
src/rust/code/ui/: calculator.glade
